Use Stream#toList for more succinct code